--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "dev1": "nodemon src/employee_payroll.ts",
     "build": "tsc -p ."
       },
   "repository": {
